
icon:check[] Search: Backpressure for handling index requests has been improved. This reduces memory usage when indexing large amounts of data in a short period of time.

[[v0.36.2]]
== 0.36.2 (02.07.2019)

icon:check[] Search: Encoding issues which happen on systems which were not using `UTF-8` as default locale have been fixed by updating the underlying Elasticsearch client. link:https://github.com/gentics/mesh/issues/498[498]

icon:plus[] Search: It is now possible to use encrypted and authenticated connections between Gentics Mesh and Elasticsearch. New settings and environment variables have been added. Details can be found in the link:{{< relref "elasticsearch.asciidoc" >}}#_security[Elasticsearch documentation] https://github.com/gentics/mesh/issues/759[#759]

icon:plus[] Security: The 'spring-security' library has been updated.

icon:plus[] OrientDB: The included OrientDB version has been updated to version 3.0.21

icon:plus[] GraphQL: You can now track ingoing node references. See the link:{{< relref "graphql.asciidoc" >}}#_loading_ingoing_references[example] in the documentation.

icon:check[] Search: Fixed a bug that caused configured timeouts to not be applied correctly.

[[v0.36.1]]
== 0.36.1 (18.06.2019)

icon:plus[] Core: Support for Java 11 runtime has been added.

icon:plus[] Docker: The base image of the `gentics/mesh` and `gentics/mesh-demo` images have been updated to use the `adoptopenjdk/openjdk11:x86_64-alpine-jre-11.0.3_7` image.

icon:plus[] Docker: The included Elasticsearch version has been updated to version 6.8.0. Please note that support for embedded Elasticsearch will be dropped in the future.

icon:check[] REST: The deletion of microschemas which contain changes has been fixed. Previously a `NotImplementedException` was thrown for microschemas which contained changes. link:https://github.com/gentics/mesh/issues/589[#589]
